src/test/resources/org/xmlcml/www/cmlcomp/invalid/joblist-two-empty-jobs-with-one-title.cml
<?xml version="1.0" encoding="UTF-8"?>
<cml
    cmlx:note="A cmlcomp joblist which contains two empty jobs with one title is invalid"
    convention="conventions:cmlcomp"
    xmlns="http://www.xml-cml.org/schema"
    xmlns:xsd="http://www.w3.org/2001/XMLSchema"
    xmlns:conventions="http://www.xml-cml.org/conventions/"
    xmlns:cmlx="http://www.xml-cml.org/schema/cmlx">

    <module role="joblist">
        <module role="job" title="job1"></module>
        <module role="job"></module>
    </module>
</cml>